# cy-WebGIS-Server

./: .gitignore  BdMap.html  README.md  onlywebStartup.sh  pre.js  record.txt  startup.sh  todo.txt
cpp/: CMakeLists.txt
cpp/include/: com_billiard_operator_DistanceComputer.h  com_operator_DistanceComputer.h  com_servlet_Test.h
cpp/src/: com_billiard_operator_DistanceComputer.cc  com_operator_DistanceComputer.cc  com_servlet_Test.cc
design/: Structure.drawio
jni/include/: com_billiard_operator_DistanceComputer.h
jni/src/: com_billiard_operator_DistanceComputer.cc
src/com/billiard/entity/: PointInfo.java  PointInfoWithDistance.java
src/com/billiard/operator/: DistanceComputer.java  DistanceSelector.java
src/com/billiard/servlet/: BilliardRoomLoaderServlet.java  (+3 more)
src/com/connection/: Main.java
src/com/dbconn/: DBConn.java
src/com/operator/: DistanceComputer.java  DistanceSelector.java  PointInfo.java
src/com/servlet/: AccountCheckServlet.java  BilliardRoomLoaderServlet.java  JNITestServlet.java  LocationSelectorServlet.java  PointRequestServlet.java  ProvinceLoaderServlet.java  ProvinceSelectorServlet.java  WebgisServlet.java
src/js/map/: displayLonLat.js  mainMap.js  selectLocation.js
src/js/test/: displayPoint.js
test/: test.py
webgis/: hh.html  index.html  index.jsp
webgis/WEB-INF/: web.xml
webgis/js/: test.js
webgis/map/: index.html  main.js  package-lock.json  package.json  playBilliards.js
webgis/map/css/: main.css
webgis/map/public/: addMapEventPointerMove.js  createMap.js  init.js  log.js  playBilliards.js  resetCss.js
(+12 files in other folders)
